--- a/package.json
+++ b/package.json
@@ -38,24 +38,26 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "winston": "^3.11.0",
-    "chokidar": "^3.5.3",
     "ajv": "^8.12.0",
+    "chokidar": "^3.5.3",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "glob": "^10.3.10",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "winston": "^3.11.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.6",
     "@types/winston": "^2.4.4",
-    "@types/glob": "^8.1.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.3.3"
