--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "^20.10.6",
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
+    "prettier": "^3.7.3",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
