--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "format:check": "prettier --check 'src/**/*.ts'",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write 'src/**/*.ts'",
     "prepublishOnly": "npm run build && npm test"
