--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Status Checks
 
 on:
   push:
@@ -7,29 +7,44 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  quality:
+    name: Quality (Lint & Format)
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v3
       with:
         node-version: '18'
         cache: 'npm'
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Check Code Formatting
+    - run: npm ci
+    - name: Check Formatting
       run: npm run format:check
-
     - name: Lint
       run: npm run lint
 
+  test:
+    name: Tests & Coverage
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+    - run: npm ci
+    - name: Run Tests
+      run: npm run test:coverage
+
+  build:
+    name: Build Verification
+    runs-on: ubuntu-latest
+    needs: [quality, test]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+    - run: npm ci
     - name: Build
       run: npm run build
-
-    - name: Run Tests with Coverage
-      run: npm run test:coverage
