--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.6",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "eslint": "^9.39.1",
     "jest": "^29.7.0",
     "prettier": "^3.7.3",
     "ts-jest": "^29.4.6",
