--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "format:check": "prettier --check 'src/**/*.ts'",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "format": "prettier --write 'src/**/*.ts'",
     "prepublishOnly": "npm run build && npm test"
   },
@@ -65,7 +65,8 @@
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.48.0"
   },
   "engines": {
     "node": ">=18.0.0"
