--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
   release:
     name: Release & Publish to NPM
     runs-on: ubuntu-latest
+    # Skip if commit message contains [skip ci] or chore(release)
+    if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, 'chore(release)')"
     permissions:
       contents: write
       packages: write
@@ -18,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -41,8 +43,8 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Bump version and create tag
-        id: bump
+      - name: Determine version bump and update package.json
+        id: version
         run: |
           # Get commit message to determine version bump type
           COMMIT_MSG=$(git log -1 --pretty=%B)
@@ -55,36 +57,44 @@ jobs:
             VERSION_TYPE="patch"
           fi
 
-          echo "Bumping $VERSION_TYPE version"
-          npm version $VERSION_TYPE -m "chore(release): %s [skip ci]"
+          echo "🔼 Bumping $VERSION_TYPE version"
+
+          # Bump version and create git tag
+          npm version $VERSION_TYPE -m "chore(release): bump version to %s [skip ci]"
 
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "New version: $NEW_VERSION"
+          echo "✨ New version: $NEW_VERSION"
 
-      - name: Push changes
+      - name: Push changes and tags
         run: |
           git push origin main --follow-tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ steps.bump.outputs.new_version }}
-          release_name: Release v${{ steps.bump.outputs.new_version }}
+          tag_name: v${{ steps.version.outputs.new_version }}
+          name: Release v${{ steps.version.outputs.new_version }}
           body: |
-            ## Changes
+            ## 🚀 Release v${{ steps.version.outputs.new_version }}
 
+            ### Changes
             See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/main/CHANGELOG.md) for details.
 
-            ## Installation
-
+            ### Installation
             ```bash
-            npm install flux-oriented-architecture@${{ steps.bump.outputs.new_version }}
+            npm install flux-oriented-architecture@${{ steps.version.outputs.new_version }}
             ```
+
+            ### What's Changed
+            Full Changelog: https://github.com/${{ github.repository }}/compare/v1.0.0...v${{ steps.version.outputs.new_version }}
           draft: false
           prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to NPM
         run: npm publish --access public
@@ -94,5 +104,12 @@ jobs:
       - name: Notify success
         if: success()
         run: |
-          echo "✅ Successfully released v${{ steps.bump.outputs.new_version }} to NPM!"
+          echo "✅ Successfully released v${{ steps.version.outputs.new_version }} to NPM!"
           echo "📦 Package: https://www.npmjs.com/package/flux-oriented-architecture"
+          echo "🔖 GitHub Release: https://github.com/${{ github.repository }}/releases/tag/v${{ steps.version.outputs.new_version }}"
+
+      - name: Notify failure
+        if: failure()
+        run: |
+          echo "❌ Release failed!"
+          echo "Check the logs above for details."
