--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ajv": "^8.12.0",
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "glob": "^10.3.10",
@@ -57,14 +58,17 @@
     "@types/express": "^4.17.21",
     "@types/glob": "^8.1.0",
     "@types/jest": "^30.0.0",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.10.6",
     "@types/pg": "^8.15.6",
+    "@types/supertest": "^2.0.16",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^9.39.1",
     "jest": "^29.7.0",
     "prettier": "^3.7.3",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
