--- a/src/cli/templates/config.template.json
+++ b/src/cli/templates/config.template.json
@@ -1,6 +1,12 @@
 {
   "server": {
-    "port": 3000
+    "port": 3000,
+    "cors": {
+      "origin": "${APP_BASE_URL}",
+      "credentials": true,
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"],
+      "allowedHeaders": ["Content-Type", "Authorization"]
+    }
   },
   "paths": {
     "actions": "src/actions",
